--- a/requirements.txt
+++ b/requirements.txt
@@ -1,89 +1,89 @@
-altair==4.1.0
-appnope==0.1.0
-astor==0.8.1
-attrs==19.3.0
-backcall==0.2.0
-base58==2.0.1
-bleach==3.3.0
-blinker==1.4
-boto3==1.14.16
-botocore==1.17.16
-cachetools==4.1.1
-certifi==2020.6.20
-chardet==3.0.4
-click==7.1.2
-cycler==0.10.0
-Cython==0.29.17
-decorator==4.4.2
-defusedxml==0.6.0
-docutils==0.15.2
-entrypoints==0.3
-enum-compat==0.0.3
-idna==2.10
-importlib-metadata==1.7.0
-ipykernel==5.3.1
-ipython==7.16.3
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-jedi==0.17.1
-Jinja2==2.11.3
-jmespath==0.10.0
-joblib==0.16.0
-jsonschema==3.2.0
-jupyter-client==6.1.5
-jupyter-core==4.6.3
-kiwisolver==1.2.0
-MarkupSafe==1.1.1
-matplotlib==3.2.2
-mistune==0.8.4
-nbconvert==5.6.1
-nbformat==5.0.7
-notebook==6.4.10
-numpy==1.21.0
-packaging==20.4
-pandas==1.0.5
-pandocfilters==1.4.2
-parso==0.7.0
-pathtools==0.1.2
-patsy==0.5.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.0.1
-plotly==4.8.2
-pmdarima==1.6.1
-prometheus-client==0.8.0
-prompt-toolkit==3.0.5
-protobuf==3.15.0
-ptyprocess==0.6.0
-pyarrow==1.0.0
-pydeck==0.4.0b2
-Pygments==2.7.4
-pyparsing==2.4.7
-pyrsistent==0.16.0
-python-dateutil==2.8.1
-pytz==2020.1
-pyzmq==19.0.1
-requests==2.24.0
-retrying==1.3.3
-s3transfer==0.3.3
-scikit-learn==0.23.1
-scipy==1.5.2
-Send2Trash==1.5.0
-six==1.15.0
-statsmodels==0.11.1
-streamlit==0.62.1
-terminado==0.8.3
-testpath==0.4.4
-threadpoolctl==2.1.0
-toml==0.10.1
-toolz==0.10.0
-tornado==6.0.4
-traitlets==4.3.3
-tzlocal==2.1
-urllib3==1.26.5
-validators==0.15.0
-watchdog==0.10.3
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.5.1
-zipp==3.1.0
+altair
+appnope
+astor
+attrs
+backcall
+base58
+bleach
+blinker
+boto3
+botocore
+cachetools
+certifi
+chardet
+click
+cycler
+Cython
+decorator
+defusedxml
+docutils
+entrypoints
+enum-compat
+idna
+importlib-metadata
+ipykernel
+ipython
+ipython-genutils
+ipywidgets
+jedi
+Jinja2
+jmespath
+joblib
+jsonschema
+jupyter-client
+jupyter-core
+kiwisolver
+MarkupSafe
+matplotlib
+mistune
+nbconvert
+nbformat
+notebook
+numpy
+packaging
+pandas
+pandocfilters
+parso
+pathtools
+patsy
+pexpect
+pickleshare
+Pillow
+plotly
+pmdarima
+prometheus-client
+prompt-toolkit
+protobuf
+ptyprocess
+pyarrow
+pydeck
+Pygments
+pyparsing
+pyrsistent
+python-dateutil
+pytz
+pyzmq
+requests
+retrying
+s3transfer
+scikit-learn
+scipy
+Send2Trash
+six
+statsmodels
+streamlit
+terminado
+testpath
+threadpoolctl
+toml
+toolz
+tornado
+traitlets
+tzlocal
+urllib3
+validators
+watchdog
+wcwidth
+webencodings
+widgetsnbextension
+zipp
